Fixed SVG issue with doc root

--- a/Resources/Core/css/rightcontext.css
+++ b/Resources/Core/css/rightcontext.css
@@ -2,7 +2,7 @@
 
 .rightcontext {
 	color: white;
-	background: url('..//Images/rightcontext.svg');
+	background: url('../images/rightcontext.svg');
 	width: 325px;
 	height: 75px;
 	float: right;
