Leftnav items now all display at the same width

--- a/Resources/Core/css/styles.css
+++ b/Resources/Core/css/styles.css
@@ -87,14 +87,16 @@ body {
 }
 
 .leftnavitem {
-	font-size: 55px;
+	font-size: 45px;
 	text-decoration: none;
 	font-family: Roboto-Italic;
 	color: black;
 	background: white;
 	border-radius: 5px;
 	padding: 5px;
-
+	display:block;
+	margin:auto;
+	width:75%;
 }
 
 .leftnavitem:hover {
