--- a/Resources/Core/css/dialog.css
+++ b/Resources/Core/css/dialog.css
@@ -6,7 +6,7 @@
 	top: 15%;
 	width: 400px;
 	height: 200px;
-	background: white;
+	background: #9933CC;
 	z-index: 2;
 	border-radius: 15px;
 	padding: 10px;
