--- a/Resources/Core/css/selector.css
+++ b/Resources/Core/css/selector.css
@@ -14,11 +14,11 @@
 }
 
 .selector p:hover {
-	color: #99CC00;
+	color: #FFBB33;
 }
 
 .selector p:focus {
-	color: #99CC00;
+	color: #FFBB33;
 }
 
 .selected {
