--- a/Resources/Core/css/styles.css
+++ b/Resources/Core/css/styles.css
@@ -123,7 +123,7 @@ body {
 .contentblock {
 	width: 85%;
 	text-align: center;
-	background-color: black;
+	background-color: #222;
 	color: white;
 	margin: auto;
 	margin-bottom: 25px;
